[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/ModBrowser/ModBrowser.gd" type="Script" id=1]
[ext_resource path="res://Game/SmartScrollContainer.gd" type="Script" id=2]
[ext_resource path="res://Fonts/Titillium-Regular.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 38
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.458824 )

[node name="ModBrowser" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="HTTPRequestMod" type="HTTPRequest" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Control" type="Control" parent="VBoxContainer"]
margin_right = 1280.0
margin_bottom = 5.0
rect_min_size = Vector2( 0, 5 )

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 9.0
margin_right = 1280.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 1 )
text = "Mod Browser"
align = 1

[node name="CloseButton" type="Button" parent="VBoxContainer/Label"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -10.0
margin_right = 42.0
margin_bottom = 10.0
text = "Close"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 52.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 425.0
margin_bottom = 668.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 418.0
margin_bottom = 661.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer"]
margin_right = 411.0
margin_bottom = 14.0
text = "All available mods"
align = 1

[node name="HFlowContainer" type="HFlowContainer" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 411.0
margin_bottom = 38.0

[node name="SortNameButton" type="Button" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/HFlowContainer"]
margin_right = 96.0
margin_bottom = 20.0
text = "Sort by name"

[node name="SortNewestFirstButton" type="Button" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/HFlowContainer"]
margin_left = 100.0
margin_right = 189.0
margin_bottom = 20.0
text = "Newest first"

[node name="SortOldestFirstButton" type="Button" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/HFlowContainer"]
margin_left = 193.0
margin_right = 277.0
margin_bottom = 20.0
text = "Oldest first"

[node name="ModSearch" type="LineEdit" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 411.0
margin_bottom = 66.0
max_length = 256
placeholder_text = "Search Mod..."

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 70.0
margin_right = 411.0
margin_bottom = 654.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )

[node name="ModList" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/ScrollContainer"]
margin_right = 411.0
margin_bottom = 584.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/ScrollContainer/ModList"]
margin_right = 411.0
margin_bottom = 31.0
text = "
LOADING MOD LIST"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 429.0
margin_right = 1280.0
margin_bottom = 668.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 851.0
margin_bottom = 668.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 844.0
margin_bottom = 661.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HFlowContainer" type="HFlowContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer"]
margin_right = 837.0
margin_bottom = 20.0

[node name="DownloadModButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer/HFlowContainer"]
margin_right = 108.0
margin_bottom = 20.0
text = "Download mod"

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer"]
margin_top = 24.0
margin_right = 837.0
margin_bottom = 654.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true

[node name="DownloadingContrainer" type="PanelContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 2 )

[node name="Label" type="Label" parent="DownloadingContrainer"]
margin_top = 353.0
margin_right = 1280.0
margin_bottom = 367.0
text = "Downloading..."
align = 1

[node name="MessageDialog" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -226.5
margin_top = -79.0
margin_right = 226.5
margin_bottom = 79.0
dialog_autowrap = true

[connection signal="visibility_changed" from="." to="." method="_on_ModBrowser_visibility_changed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="request_completed" from="HTTPRequestMod" to="." method="_on_HTTPRequestMod_request_completed"]
[connection signal="pressed" from="VBoxContainer/Label/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/HFlowContainer/SortNameButton" to="." method="_on_SortNameButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/HFlowContainer/SortNewestFirstButton" to="." method="_on_SortNewestFirstButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/HFlowContainer/SortOldestFirstButton" to="." method="_on_SortOldestFirstButton_pressed"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/ModSearch" to="." method="_on_ModSearch_text_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer/HFlowContainer/DownloadModButton" to="." method="_on_DownloadModButton_pressed"]
[connection signal="meta_clicked" from="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer/RichTextLabel" to="." method="_on_RichTextLabel_meta_clicked"]
